--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,7 +81,7 @@ tr,
 p,
 a {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px
+  font-size: 18px
 }
 
 strong {
@@ -127,5 +127,5 @@ name {
 }
 
 span.highlight {
-  background-color: #ffffd0;
+  background-color: hsl(60, 5%, 67%);
 }
