--- a/stylesheet.css
+++ b/stylesheet.css
@@ -221,11 +221,14 @@ main {
 }
 
 .profile-picture {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
+  width: 225px;
+  height: 225px;
+  top: 32px;
+  position: relative;
+  border-radius: 0%;
   object-fit: cover;
   flex-shrink: 0;
+  vertical-align: middle;
 }
 
 section {
